--- a/CdekAPI.csproj
+++ b/CdekAPI.csproj
@@ -8,8 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="AttributeRouting.Core" Version="3.5.6" />
-    <PackageReference Include="AutoMapper" Version="12.0.1" />
-    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+    <PackageReference Include="Microsoft.AspNet.Mvc" Version="5.2.9" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
